# SensorNetwork2021_DashServer_SDS011_DHT22

./: .dockerignore  .gitignore  README.md  docker-compose.yml
Docs/: APP_ARCHITECTURE.md  DEPLOYMENT.md  MODERNIZATION_PLAN.md
deploy/: install-native.sh  sensornet.service
firmware/: README.md
firmware/combo_node/: README.md  platformio.ini
firmware/combo_node/src/: main.cpp
firmware/prebuilt/: README.md
legacy/: README.md  READNE-jp.md  __init__.py  requirments.txt  setup.md  variables.py  variables_temp.py
legacy/AQ_Plot/: AQMapfunctions.py  GPS_MAP.html
legacy/AQ_Plot/Plots/: Toyonakaipopplot_Bike_GPS_20201018.html  Toyonakaipopplot_Myoukenguchi_GPS_20200628.html  Toyonakaipopplot_Myoukenguchi_GPS_20200629.html  Userspopplot_Bike_GPS_20201018.html  popup_plot20200628103089.html  popup_plot2020062814708.html  popup_plot20200628165082.html  (+22 more)
legacy/AQ_Plot_server/: Index.py  README.md  __init__.py  dash_server.py  dash_server_2.py  data_reciver.py
legacy/AQ_nodes/: DHT22-Flasknode.ino  README.md
server/: .env.example  Dockerfile  README.md  pyproject.toml
server/app/: __init__.py  config.py  db.py  main.py  models.py  rollup.py  settings_store.py  timeutils.py  weatherlog.py
server/app/api/: flash.py  ingest.py  nodes.py  readings.py  schemas.py  settings.py  weather.py
server/app/services/: __init__.py  flasher.py  weather.py
server/app/web/static/: app.js  style.css
server/app/web/templates/: index.html
server/collector/: README.md  __init__.py  dht.py  run.py  sds011.py
server/scripts/: import_legacy_csv.py  seed_demo.py
(+8 files in other folders)
