[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sensornet-server"
version = "0.1.0"
description = "Home sensor-network server: ingest, dashboard, weather, node flashing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",     # SQLAlchemy + Pydantic models over SQLite
    "httpx>=0.27",          # for the Open-Meteo weather proxy (Phase 3)
    "apscheduler>=3.10",    # rollup + prune job (Phase 1, §3.1)
    "jinja2>=3.1",          # dashboard templates (Phase 2)
    "esptool>=4.7",         # flash ESP32 nodes from the dashboard (Phase 4)
    "pyserial>=3.5",        # enumerate USB serial ports for flashing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
# DHT22 on a GPIO board (Raspberry Pi). Not needed for SDS011-over-USB.
dht = [
    "adafruit-circuitpython-dht>=4.0",
]

[tool.setuptools.packages.find]
# Ship the app package (incl. subpackages); exclude data/ (SQLite) and scripts/.
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.uvicorn]
# run with: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
